# QML

./: .gitignore  ImageViewer  README.md  config.ini
ImageViewer/: CLAUDE.md  reademe.md  readme  readme.md
ImageViewer-simple/: readme
ImageViewer-simple/ImageViwer/: MainFile.qml
ImageViewer/ImageViewer/: readme
ImageViewer/ImageViewer/ImageInfo/: CMakeLists.txt  CMakeLists.txt.user.b5860a2  ImageInfoControls.qml  imageinfo.cpp  imageinfo.h  imageinfostruct.cpp  imageinfostruct.h  myextensionplugins.cpp  myextensionplugins.h  qmldir
ImageViewer/ImageViewer/ImageViewer/: 1111.txt  BookmarksToolButton.qml  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.user.b5860a2  CopyToolButton.qml  CropSelection.qml  EditToolButton.qml  FilmStrip.qml  ImageAnimations.qml  ImageContainer.qml  ImageViewer.qml  KeyboardShortcuts.qml  LockerToolButton.qml  Main.qml  Main.qml.old  MyImageInfo.qml  MyMenuItem.qml  MyToolBar.qml  MyToolButton.qml  RotateToolButton.qml  ScaleIndicator.qml  ScanToolButton.qml  SetWallpaperToolButton.qml  ShortcutManager.qml  SlideToolButton.qml  Viewer.qml  ZoomIndicator.qml  cslide.cpp  cslide.h  cwindowmanager.h  main.cpp  requestment.txt  undomanager.cpp  undomanager.h  窗口调整大小问题总结.md  设置桌面背景功能设计方案.md
ImageViewer/ImageViewer/ImageViewer/.claude/: settings.local.json
ImageViwer/: CMakeLists.txt  ImageViewerWindow.qml  main.cpp
ImageViwer/+android/: MainFile.qml
ZYYMusic/: CLAUDE.md  CMakeLists.txt  Main.qml  PreviewFunctionRequirementsDocument.txt  README.md  RequirementsDocument.txt  aaa.txt  main.cpp  qmldir  res.qrc  test.txt
ZYYMusic/.claude/: settings.local.json
ZYYMusic/.serena/: project.yml
ZYYMusic/.serena/memories/: code-style-conventions.md  post-task-actions.md  project-overview.md  suggested_commands.md
ZYYMusic/Basic/: BasicConfig.qml  qmldir
ZYYMusic/CommonUI/: TextFiledCtrl.qml  ZYYCheckBox.qml  ZYYComboBox.qml  ZYYDowloadFolderDialog.qml  ZYYRadioButton.qml  ZYYSearchBox.qml  ZYYShotcutTextField.qml  ZYYWindow.qml
ZYYMusic/LeftPage/: LeftPage.qml
ZYYMusic/PlayMusic/: PlayMusic.qml
ZYYMusic/RightPage/: MinMax.qml  OthersPage.qml  RightPage.qml  Search.qml  TitlePage.qml
ZYYMusic/RightPage/StackPages/: Artists.qml  CloudMusic.qml  Featured.qml  PlaylistSquare.qml  RankDetail.qml  Rankings - 副本.qml  Rankings.qml  Setting.qml
ZYYMusic/RightPage/StackPages/SettingItem/: About.qml  Counter.qml  DesktopLyrics.qml  DesktopLyricsSetting.qml  MessagingPrivacy.qml  Play.qml  ShortCut.qml  SoundAndDownload.qml  Standard.qml  SystemConfig.qml  Tool.qml
ZYYMusic/RightPage/StackPages/SubFeatured/: Carousel.qml  LatestMusic - 副本.qml  LatestMusic.qml  OfficialPlaylist.qml
ZYYMusic/mainPopups/: LoginByOtherMainsPopup.qml  LoginPopup - 副本.qml  LoginPopup.qml
